# finephrase-vi

./: 404.html  AGENT.md  SKILL.md  docusaurus.config.ts  index.html  package-lock.json  package.json  readme_x.md  sitemap.xml
.github/workflows/: deploy.yml
assets/css/: styles.e33edfe6.css
assets/js/: 1134.1065a13d.js  1360.b33651dd.js  1453.89fdee3e.js  1662.5299499d.js  1668.6b349b59.js  173.ba01f06e.js  17896441.2ce29578.js  1962.bb12a4a4.js  1df93b7f.0a0a436e.js  2633.156a4c59.js  2635.98fe5ca3.js  2638.f9f75ac5.js  2936.d05014d2.js  2969.4e6ce379.js  3408.aa01a438.js  3693.0db5adcf.js  3710.991c82e7.js  3790.a2257bd5.js  3803.c0a5cc86.js  3904.138cb429.js  4064.d23ead74.js  4114.781d055d.js  4198.58a1bd80.js  4274.0576dd08.js  4496.448f7183.js  4889.e777b5d8.js  4950.64a07c88.js  4aa2f470.260dd143.js  5025.247ff79d.js  5062.76139ab5.js  5153.c92fbfb0.js  519.934b697f.js  5250.ec70102a.js  5462.3a1fa676.js  565.4aa2cd6b.js  5e95c892.fa75227c.js  6079.c48849c5.js  (+33 more)
data/: contamination_audit_report.json
docs/: finephrase.md  gioi_thieu.md  ha_tang.md  ket_luan.md  phan_tich.md  phu_luc.md  thi_nghiem.md  thiet_lap.md
embeds/: banner-library.html  banner.html  contamination-audit.html  d3-benchmark.html  d3-optimization-sweep.html  d3-pipeline.html  d3-prefix-collapse.html  d3-umap-typography.html  experiment-overview.html  finephrase-explorer.html  math-adherence-audit.html  score-correlation.html  verbosity.html
embeds/typography/: 2-generate-svgs.mjs  3-generate-pngs.mjs  4-generate-umap.py  auto-continue-pipeline.sh  pyproject.toml  run-full-pipeline.sh
(+43 files in other folders)
